--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
     <section id="index">
       <h2>Index:</h2>
-      <a href="#">About me</a>
-      <a href="#">About this website</a>
-      <a href="#">My work</a>
-      <a href="#">Ways to contact me</a>
+      <a href="about-me.html">About me</a>
+      <a href="about-this-www.html">About this website</a>
+      <a href="my-work.html">My work</a>
+      <a href="contact.html">Ways to contact me</a>
     </section>
   </body>
 </html>
