--- a/about-me.html
+++ b/about-me.html
@@ -10,9 +10,10 @@
   </head>
   <body>
     <a href="index.html" class="back"> Go Back </a>
-    <h1>About me</h1>
 
     <section id="desc">
+      <h1 id="heading">About me</h1>
+
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
         magni optio hic voluptas, perspiciatis delectus itaque possimus et error
@@ -39,32 +40,12 @@
         repellat facere eius provident incidunt voluptatem, debitis fugit, odio
         cumque.
       </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
-        magni optio hic voluptas, perspiciatis delectus itaque possimus et error
-        minus repellat facere eius provident incidunt voluptatem, debitis fugit,
-        odio cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Cupiditate magni optio hic voluptas, perspiciatis delectus itaque
-        possimus et error minus repellat facere eius provident incidunt
-        voluptatem, debitis fugit, odio cumque. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Cupiditate magni optio hic voluptas,
-        perspiciatis delectus itaque possimus et error minus repellat facere
-        eius provident incidunt voluptatem, debitis fugit, odio cumque. Lorem
-        ipsum dolor sit amet consectetur adipisicing elit. Cupiditate magni
-        optio hic voluptas, perspiciatis delectus itaque possimus et error minus
-        repellat facere eius provident incidunt voluptatem, debitis fugit, odio
-        cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Cupiditate magni optio hic voluptas, perspiciatis delectus itaque
-        possimus et error minus repellat facere eius provident incidunt
-        voluptatem, debitis fugit, odio cumque. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Cupiditate magni optio hic voluptas,
-        perspiciatis delectus itaque possimus et error minus repellat facere
-        eius provident incidunt voluptatem, debitis fugit, odio cumque. Lorem
-        ipsum dolor sit amet consectetur adipisicing elit. Cupiditate magni
-        optio hic voluptas, perspiciatis delectus itaque possimus et error minus
-        repellat facere eius provident incidunt voluptatem, debitis fugit, odio
-        cumque.
-      </p>
+    </section>
+    <section id="index">
+      <a href="about-me.html">About me</a>
+      <a href="about-this-www.html">About this website</a>
+      <a href="my-work.html">My work</a>
+      <a href="contact.html">Ways to contact me</a>
     </section>
   </body>
 </html>
