--- a/my-work.html
+++ b/my-work.html
@@ -12,34 +12,25 @@
     <a href="index.html" class="back"> Go Back </a>
 
     <section id="desc">
-      <h1 id="heading">My work</h1>
+      <h1 id="heading">My Work</h1>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
-        magni optio hic voluptas, perspiciatis delectus itaque possimus et error
-        minus repellat facere eius provident incidunt voluptatem, debitis fugit,
-        odio cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Cupiditate magni optio hic voluptas, perspiciatis delectus itaque
-        possimus et error minus repellat facere eius provident incidunt
-        voluptatem, debitis fugit, odio cumque. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Cupiditate magni optio hic voluptas,
-        perspiciatis delectus itaque possimus et error minus repellat facere
-        eius provident incidunt voluptatem, debitis fugit, odio cumque. Lorem
-        ipsum dolor sit amet consectetur adipisicing elit. Cupiditate magni
-        optio hic voluptas, perspiciatis delectus itaque possimus et error minus
-        repellat facere eius provident incidunt voluptatem, debitis fugit, odio
-        cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Cupiditate magni optio hic voluptas, perspiciatis delectus itaque
-        possimus et error minus repellat facere eius provident incidunt
-        voluptatem, debitis fugit, odio cumque. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Cupiditate magni optio hic voluptas,
-        perspiciatis delectus itaque possimus et error minus repellat facere
-        eius provident incidunt voluptatem, debitis fugit, odio cumque. Lorem
-        ipsum dolor sit amet consectetur adipisicing elit. Cupiditate magni
-        optio hic voluptas, perspiciatis delectus itaque possimus et error minus
-        repellat facere eius provident incidunt voluptatem, debitis fugit, odio
-        cumque.
-      </p>
+      <div class="gallery">
+        <a href="work-1.html">
+          <img src="img/gallery1.jpg" alt="Laptop" width="600" height="400" />
+        </a>
+        <div class="desc">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae.
+        </div>
+      </div>
+
+      <div class="gallery">
+        <a href="work-1.html">
+          <img src="img/gallery1.jpg" alt="Laptop" width="600" height="400" />
+        </a>
+        <div class="desc">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae.
+        </div>
+      </div>
     </section>
     <section id="index">
       <a href="about-me.html">About me</a>
