--- a/my-work.html
+++ b/my-work.html
@@ -16,7 +16,7 @@
 
       <div class="gallery">
         <a href="work-1.html">
-          <img src="img/gallery1.jpg" alt="Laptop" width="600" height="400" />
+          <img src="gallery1.jpg" alt="Laptop" width="600" height="400" />
         </a>
         <div class="desc">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae.
@@ -25,7 +25,7 @@
 
       <div class="gallery">
         <a href="work-1.html">
-          <img src="img/gallery1.jpg" alt="Laptop" width="600" height="400" />
+          <img src="gallery1.jpg" alt="Laptop" width="600" height="400" />
         </a>
         <div class="desc">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae.
