--- a/work-1.html
+++ b/work-1.html
@@ -13,7 +13,7 @@
 
     <section id="desc">
       <h1 id="heading">Work #1</h1>
-      <img class="work-post" src="img/gallery1.jpg" />
+      <img class="work-post" src="gallery1.jpg" />
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
         magni optio hic voluptas, perspiciatis delectus itaque possimus et error
@@ -40,7 +40,7 @@
         repellat facere eius provident incidunt voluptatem, debitis fugit, odio
         cumque.
       </p>
-      <img class="work-post" src="img/gallery1.jpg" />
+      <img class="work-post" src="gallery1.jpg" />
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
         magni optio hic voluptas, perspiciatis delectus itaque possimus et error
