--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- partial:index.partial.html -->
-
+<div class="hero">
     <div class="scene">
       <div class="banner">
         <div class="panel"></div>
@@ -38,6 +38,7 @@
         <div class="panel"></div>
       </div>
       <div class="screen"></div>
+    </div>
     </div>
     <!-- partial -->
 
