--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,10 @@
 
     <section id="desc">
       <h1 id="heading">About me</h1>
-
+      <button id="category-link"><a href="#">Bio</a></button>
+      <button id="category-link"><a href="#">Work</a></button>
+      <button id="category-link"><a href="#">Tools</a></button>
+      <h2 id="heading2">Bio</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
         magni optio hic voluptas, perspiciatis delectus itaque possimus et error
@@ -22,25 +25,137 @@
         Cupiditate magni optio hic voluptas, perspiciatis delectus itaque
         possimus et error minus repellat facere eius provident incidunt
         voluptatem, debitis fugit, odio cumque. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Cupiditate magni optio hic voluptas,
-        perspiciatis delectus itaque possimus et error minus repellat facere
-        eius provident incidunt voluptatem, debitis fugit, odio cumque. Lorem
-        ipsum dolor sit amet consectetur adipisicing elit. Cupiditate magni
-        optio hic voluptas, perspiciatis delectus itaque possimus et error minus
-        repellat facere eius provident incidunt voluptatem, debitis fugit, odio
-        cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Cupiditate magni optio hic voluptas, perspiciatis delectus itaque
-        possimus et error minus repellat facere eius provident incidunt
-        voluptatem, debitis fugit, odio cumque. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Cupiditate magni optio hic voluptas,
-        perspiciatis delectus itaque possimus et error minus repellat facere
-        eius provident incidunt voluptatem, debitis fugit, odio cumque. Lorem
-        ipsum dolor sit amet consectetur adipisicing elit. Cupiditate magni
-        optio hic voluptas, perspiciatis delectus itaque possimus et error minus
-        repellat facere eius provident incidunt voluptatem, debitis fugit, odio
-        cumque.
+        consectetur adipisicing elit.
       </p>
-    </section>
+      <h2 id="heading2">Work</h2>
+      <p>
+        2000 - 2018, Maxima - COO.
+        <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Quisque congue diam in eleifend facilisis.</p>
+      <p>
+        2018 - 2019, Norfa - Branch Manager.<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue
+        diam in eleifend facilisis. </p>
+        <p>
+        2019 - now, Rimi - Super coolio dudelio.<br>Lorem ipsum dolor sit amet,
+        consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+        </p>
+      <h2 id="heading2">Tools</h2>
+      <p>Adobe Photoshop XD
+        Skills:
+        <ul>
+      <li> Lorem ipsum</li> 
+      <li> Lorem ipsum</li> 
+      <li> Lorem ipsum</li> 
+      <li> Lorem ipsum</li> 
+        </ul>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+        </p>
+
+        <p>Adobe Photoshop XD
+          Skills:
+          <ul>
+        <li> Lorem ipsum</li> 
+        <li> Lorem ipsum</li> 
+        <li> Lorem ipsum</li> 
+        <li> Lorem ipsum</li> 
+          </ul>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+          </p>
+
+          <p>Adobe Photoshop XD
+            Skills:
+            <ul>
+          <li> Lorem ipsum</li> 
+          <li> Lorem ipsum</li> 
+          <li> Lorem ipsum</li> 
+          <li> Lorem ipsum</li> 
+            </ul>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+            </p>
+
+            <p>Adobe Photoshop XD
+              Skills:
+              <ul>
+            <li> Lorem ipsum</li> 
+            <li> Lorem ipsum</li> 
+            <li> Lorem ipsum</li> 
+            <li> Lorem ipsum</li> 
+              </ul>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+              </p>
+
+
+              <p>Adobe Photoshop XD
+                Skills:
+                <ul>
+              <li> Lorem ipsum</li> 
+              <li> Lorem ipsum</li> 
+              <li> Lorem ipsum</li> 
+              <li> Lorem ipsum</li> 
+                </ul>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+                </p>
+
+
+                <p>Adobe Photoshop XD
+                  Skills:
+                  <ul>
+                <li> Lorem ipsum</li> 
+                <li> Lorem ipsum</li> 
+                <li> Lorem ipsum</li> 
+                <li> Lorem ipsum</li> 
+                  </ul>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+                  </p>
+
+
+                  <p>Adobe Photoshop XD
+                    Skills:
+                    <ul>
+                  <li> Lorem ipsum</li> 
+                  <li> Lorem ipsum</li> 
+                  <li> Lorem ipsum</li> 
+                  <li> Lorem ipsum</li> 
+                    </ul>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+                    </p>
+
+
+                    <p>Adobe Photoshop XD
+                      Skills:
+                      <ul>
+                    <li> Lorem ipsum</li> 
+                    <li> Lorem ipsum</li> 
+                    <li> Lorem ipsum</li> 
+                    <li> Lorem ipsum</li> 
+                      </ul>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+                      </p>
+
+
+
+                      <p>Adobe Photoshop XD
+                        Skills:
+                        <ul>
+                      <li> Lorem ipsum</li> 
+                      <li> Lorem ipsum</li> 
+                      <li> Lorem ipsum</li> 
+                      <li> Lorem ipsum</li> 
+                        </ul>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+                        </p>
+
+
+                        <p>Adobe Photoshop XD
+                          Skills:
+                          <ul>
+                        <li> Lorem ipsum</li> 
+                        <li> Lorem ipsum</li> 
+                        <li> Lorem ipsum</li> 
+                        <li> Lorem ipsum</li> 
+                          </ul>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue diam in eleifend facilisis.
+                          </p>
     <section id="index">
       <a href="about-me.html">About me</a>
       <a href="about-this-www.html">About this website</a>
