added mysetup ahref url

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
       <h2>Index:</h2>
       <a href="about-me.html">About me</a>
       <a href="about-this-www.html">About this website</a>
+      <a href="my_setup.html"> My setup </a>
       <a href="my-work.html">My work</a>
       <a href="contact.html">Ways to contact me</a>
+     <div class="lol"><img src="illustration_001.png" class="center"> </div> 
     </section>
   </body>
 </html>
