removed illustr and added some js

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
       <a href="my_setup.html"> My setup </a>
       <a href="my-work.html">My work</a>
       <a href="contact.html">Ways to contact me</a>
-     <div class="lol"><img src="illustration_001.png" class="center"> </div> 
+    <!--  <div class="lol"><img src="illustration_001.png" class="center"> </div>  -->
     </section>
+
+    <script src="script.js"></script>
   </body>
 </html>
