--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <!--  <div class="lol"><img src="illustration_001.png" class="center"> </div>  -->
     </section>
 
-    <script src="script.js"></script>
+
+    <script src="cursor1.js"></script>
+    <script src="cursor.js"></script>
   </body>
 </html>
